@@ -7,6 +7,7 @@ Issue #331  Enhancement     - Move Version into MailWatch
 PR    #332  Bug             - Increase the number of characters allowed for the TLD
 Issue #326  Bug             - MCP not functional
 Issue #335  Bug             - EFA-Configure Recusion Toggle Broken
+Issue #334, #234, #212 Bug  - MailWatch 1.2.0-RC3
 
 ############################################################
 EFA Version 3.0.1.5 Changes
